--- a/work-draw.html
+++ b/work-draw.html
@@ -168,6 +168,10 @@
     </section>
         <!--作品選項-->
         <section class="work">
+          <div class="work-title">
+            <h1>作品集</h1>
+            <img src="../img/底線.png" />
+          </div>
           <div class="work-item">
             <a href="./work-draw.html" class="work-draw"></a>
             <a href="./work-design.html" class="work-design"></a>
