--- a/index.html
+++ b/index.html
@@ -28,24 +28,26 @@
   </head>
   <body>
     <!--導覽列-->
-    <nav class="navbar">
-      <a class="nav-logo" href="/index.html">
-        <div class="nav-logo-img">
-          <img src="./img/頭.png" alt="" />
-        </div>
-        <span>Mimi Jou</span>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item"><a href="/index.html">首頁</a></li>
-        <li class="nav-item"><a href="#">關於我</a></li>
-        <li class="nav-item"><a href="#">經歷</a></li>
-        <li class="nav-item"><a href="#">作品集</a></li>
-      </ul>
-    </nav>
+    <section class="nav-outside">
+      <nav class="navbar">
+        <a class="nav-logo" href="/index.html">
+          <div class="nav-logo-img">
+            <img src="./img/頭.png" alt="" />
+          </div>
+          <span>Mimi Jou</span>
+        </a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="/index.html">首頁</a></li>
+          <li class="nav-item"><a href="#">關於我</a></li>
+          <li class="nav-item"><a href="#">經歷</a></li>
+          <li class="nav-item"><a href="#">作品集</a></li>
+        </ul>
+      </nav>
+    </section>
     <!--首頁-->
      <!-- 裝飾 -->
-     <img class="hero-wave1" src="../img/波浪(左).png" />
-     <img class="hero-wave2" src="../img/波浪(右).png" />
+     <img class="hero-wave1" src="../img/波浪-左.png" />
+     <img class="hero-wave2" src="../img/波浪-右.png" />
     <section class="hero">
       </div>
       <div class="hero-content">
@@ -152,7 +154,7 @@
            <br /><span style="font-weight: 700;">• 廣告影片製作</span>
            腳本規劃與分鏡繪製。剪輯KOC合作素材、娛樂性質影片、產品介紹及促銷廣告。
            <br /><span style="font-weight: 700;">• 文案助理</span>
-           制定KOC合作的素材規範、發想社群貼文內容及行銷活動，並在會議中提案。
+           制定KOC合作的素材規範、發想社群貼文內容及行銷活動，並在會議提案。
          </p>
          <!-- 公司3 -->
          <h2>三晰電工科技有限公司 社群美編</h2>
@@ -185,28 +187,28 @@
         <div class="software-item">
           <div>
           <img src="../img/Ps.png" />
-          <p>Illustrator</p>
+          <p>Photoshop</p>
           </div>
         </div>
         <!-- PR -->
         <div class="software-item">
           <div>
           <img src="../img/Pr.png" />
-          <p>Illustrator</p>
+          <p>Premiere</p>
           </div>
         </div>
         <!-- FIGMA -->
         <div class="software-item">
           <div>
           <img src="../img/FG.png" />
-          <p>Illustrator</p>
+          <p>Figma</p>
           </div>
         </div>
         <!-- CSP -->
         <div class="software-item">
           <div>
           <img src="../img/CSP.png" />
-          <p>Illustrator</p>
+          <p>CSP</p>
           </div>
         </div>
       </section>
@@ -218,11 +220,23 @@
         <img src="../img/底線.png" />
       </div>
       <div class="work-item">
-        <a  href="./work-draw.html" class="work-draw"></a>
-        <a  href="./work-design.html" class="work-design"></a>
-        <a  href="./work-vedio.html" class="work-vedio"></a>
-        <a  href="./work-UI.html" class="work-UI"></a>
+        <div class="item-box">
+          <a  href="./work-draw.html" class="work-draw"></a>
+          <p>插畫</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-design.html" class="work-design"></a>
+          <p>設計</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-vedio.html" class="work-vedio"></a>
+          <p>剪輯</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-UI.html" class="work-UI"></a>
+          <p>UI&UX</p>
       </div>
+        </div>
     </section> 
     <!--資訊-->
     <section class="lowest">
