--- a/work-draw.html
+++ b/work-draw.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimi</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./work.css" />
+    <!-- css -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/work.css" />
     <!-- 字體 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,21 +30,33 @@
   </head>
   <!--插畫-->
   <body>
-    <!--導覽列-->
-    <nav class="navbar">
-      <a class="nav-logo" href="/index.html">
-        <div class="nav-logo-img">
-          <img src="./img/頭.png" alt="" />
-        </div>
-        <span>Mimi Jou</span>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item"><a href="/index.html">首頁</a></li>
-        <li class="nav-item"><a href="#">關於我</a></li>
-        <li class="nav-item"><a href="#">經歷</a></li>
-        <li class="nav-item"><a href="#">作品集</a></li>
-      </ul>
-    </nav>
+ <!--導覽列-->
+     <!--手機-->
+     <ul class="nav-list-phone">
+      <li class="nav-item-phone"><a href="/index.html">首頁</a></li>
+      <li class="nav-item-phone"><a href="#">關於我</a></li>
+      <li class="nav-item-phone"><a href="#">經歷</a></li>
+      <li class="nav-item-phone"><a href="#">作品集</a></li>
+     </ul>
+     <!--電腦-->
+    <section class="nav-outside">
+      <nav class="navbar">
+        <a class="nav-logo" href="/index.html">
+          <div class="nav-logo-img">
+            <img src="./img/頭.png" alt="" />
+          </div>
+          <span>Mimi Jou</span>
+        </a>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="/index.html">首頁</a></li>
+          <li class="nav-item"><a href="#">關於我</a></li>
+          <li class="nav-item"><a href="#">經歷</a></li>
+          <li class="nav-item"><a href="#">作品集</a></li>
+        </ul>
+        <!--隱藏選單-->
+        <img class="nav-list-img"src="./img/三.png" alt="" />
+      </nav>
+    </section>
     <!--作品-->
     <section class="draw">
       <!-- 標題 -->
@@ -107,8 +120,8 @@
         <div class="draw-content">
           <h1>七步走•找東C</h1>
           <p>
-            由花東地區七所原住民文化館聯合策辦的
-          </br>2020東區原民館聯合策展「七步走•找東C」繪製插圖。
+            2020花東地區七所原住民文化館聯合策展
+          </br>為活動刊物「七步走•找東C」繪製內頁插圖。
           </p>
           <!-- 按鈕 -->
           <a
@@ -166,19 +179,31 @@
         </div>
       </div>
     </section>
-        <!--作品選項-->
-        <section class="work">
-          <div class="work-title">
-            <h1>作品集</h1>
-            <img src="../img/底線.png" />
-          </div>
-          <div class="work-item">
-            <a href="./work-draw.html" class="work-draw"></a>
-            <a href="./work-design.html" class="work-design"></a>
-            <a href="./work-vedio.html" class="work-vedio"></a>
-            <a href="./work-UI.html" class="work-UI"></a>
-          </div>
-        </section>
+            <!--作品選項-->
+    <section class="work">
+      <div class="work-title">
+        <h1>作品集</h1>
+        <img src="../img/底線.png" />
+      </div>
+      <div class="work-item">
+        <div class="item-box">
+          <a  href="./work-draw.html" class="work-draw"></a>
+          <p>插畫</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-design.html" class="work-design"></a>
+          <p>設計</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-vedio.html" class="work-vedio"></a>
+          <p>剪輯</p>
+        </div>
+        <div class="item-box">
+          <a  href="./work-UI.html" class="work-UI"></a>
+          <p>UI&UX</p>
+      </div>
+        </div>
+    </section> 
     <!--資訊-->
     <section class="lowest">
       <div class="information">
