--- a/work-draw.html
+++ b/work-draw.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimi</title>
@@ -27,16 +28,15 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@700&family=Noto+Sans+TC:wght@100;800&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <!--插畫-->
   <body>
- <!--導覽列-->
+    <!--導覽列-->
      <!--手機-->
      <ul class="nav-list-phone">
-      <li class="nav-item-phone"><a href="/index.html">首頁</a></li>
-      <li class="nav-item-phone"><a href="#">關於我</a></li>
-      <li class="nav-item-phone"><a href="#">經歷</a></li>
-      <li class="nav-item-phone"><a href="#">作品集</a></li>
+      <li class="nav-item-phone"><a class="nav-link" href="/index.html">回首頁</a></li>
+      <li class="nav-item-phone"><a class="nav-link" href="#work">其他作品</a></li>
      </ul>
      <!--電腦-->
     <section class="nav-outside">
@@ -48,24 +48,30 @@
           <span>Mimi Jou</span>
         </a>
         <ul class="nav-list">
-          <li class="nav-item"><a href="/index.html">首頁</a></li>
-          <li class="nav-item"><a href="#">關於我</a></li>
-          <li class="nav-item"><a href="#">經歷</a></li>
-          <li class="nav-item"><a href="#">作品集</a></li>
+          <li class="nav-item"><a class="nav-link" href="/index.html">回首頁</a></li>
+          <li class="nav-item"><a class="nav-link" href="#work">其他作品</a></li>
         </ul>
-        <!--隱藏選單-->
-        <img class="nav-list-img"src="./img/三.png" alt="" />
+         <!--隱藏選單-->
+      <button type="button" class="nav-list-btn">
+        <img class="nav-list-img"src="./img/三.png" alt="btn"/>
+      </button>
       </nav>
     </section>
     <!--作品-->
     <section class="draw">
       <!-- 標題 -->
-      <div class="draw-title">
+      <div class="draw-title"
+      data-aos="fade-up" 
+      data-aos-duration="2000"  
+      >
         <h1>插　畫</h1>
         <img src="../img/底線.png" />
       </div>
       <!-- 插畫1 -->
-      <div class="draw-board">
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="600" 
+      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -87,7 +93,10 @@
         </div>
       </div>
       <!-- 插畫2 -->
-      <div class="draw-board">
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="300" 
+      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -110,7 +119,10 @@
         </div>
       </div>
       <!-- 插畫3 -->
-      <div class="draw-board">
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="300" 
+      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -133,7 +145,10 @@
         </div>
       </div>
       <!-- 插畫4 -->
-      <div class="draw-board">
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="300" 
+      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -156,7 +171,10 @@
         </div>
       </div>
       <!-- 插畫5 -->
-      <div class="draw-board">
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="300" 
+     >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -179,8 +197,11 @@
         </div>
       </div>
     </section>
-            <!--作品選項-->
-    <section class="work">
+   <!--作品選項-->
+    <section id="work" class="work"
+    data-aos="fade-up" 
+      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-once="false">
       <div class="work-title">
         <h1>作品集</h1>
         <img src="../img/底線.png" />
@@ -218,5 +239,8 @@
          </div>
        </div>
     </section>
+    <div class="overlay"></div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./JS/index.js"></script>
   </body>
 </html>
