修改動態速度

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
     <!--關於我-->
     <section class="about" id="about" data-aos="fade-up" 
-    data-aos-duration="2000" data-aos-delay="600" data-aos-once="false">
+    data-aos-duration="2000"  data-aos-once="false">
         <!-- 標題 -->
         <div class="about-title">
           <h1>關於我</h1>
@@ -155,14 +155,14 @@
     </section>
      <!-- 裝飾 -->
       <img class="dotted-line1" data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="600" 
+      data-aos-duration="2000" data-aos-delay="300" 
       data-aos-once="false" src="../img/虛線1.png"/>
       <img class="dotted-line2" data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="900" 
+      data-aos-duration="2000" data-aos-delay="600" 
       data-aos-once="false" src="../img/虛線2.png"/>
      <!--經歷-->
     <section class="experience" id="experience" data-aos="fade-up" 
-    data-aos-duration="2000" data-aos-delay="600" data-aos-once="false">
+    data-aos-duration="2000" data-aos-once="false">
        <!-- 標題 -->
       <div class="exp-title">
         <h1>工作經歷</h1>
@@ -203,7 +203,7 @@
       </div>
       <!--軟體-->
       <section class="software" data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" data-aos-once="false">
+      data-aos-duration="2000" data-aos-once="false">
         <div class="sof-title">
           <h1>常用軟體</h1>
           <img src="../img/底線2.png" />
@@ -249,7 +249,7 @@
     </section>
      <!--作品選項-->
     <section class="work" id="work" data-aos="fade-up" 
-    data-aos-duration="2000" data-aos-delay="900" data-aos-once="false">
+    data-aos-duration="2000" data-aos-once="false">
       <div class="work-title">
         <h1>作品集</h1>
         <img src="../img/底線.png" />
