--- a/work-design.html
+++ b/work-design.html
@@ -93,7 +93,7 @@
       <!-- 設計2 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" >
+      data-aos-duration="2000"  >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -119,7 +119,7 @@
          <!--作品選項-->
          <section id="work" class="work"
          data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       data-aos-once="false">
           <div class="work-title">
             <h1>作品集</h1>
