--- a/work-draw.html
+++ b/work-draw.html
@@ -70,7 +70,7 @@
       <!-- 插畫1 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="600" 
+      data-aos-duration="2000" data-aos-delay="300" 
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -95,7 +95,7 @@
       <!-- 插畫2 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -121,7 +121,7 @@
       <!-- 插畫3 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000"  
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -147,7 +147,7 @@
       <!-- 插畫4 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -173,7 +173,7 @@
       <!-- 插畫5 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -200,7 +200,7 @@
    <!--作品選項-->
     <section id="work" class="work"
     data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       data-aos-once="false">
       <div class="work-title">
         <h1>作品集</h1>
