--- a/work-UI.html
+++ b/work-UI.html
@@ -95,7 +95,7 @@
       <!-- UI2 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -121,7 +121,7 @@
       <!-- UI3 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
      >
             <!-- 裝飾 -->
             <img class="paper-clip" src="../img/迴紋針.png" />
@@ -148,7 +148,7 @@
            <!--作品選項-->
     <section id="work" class="work"
     data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       data-aos-once="false">
       <div class="work-title">
         <h1>作品集</h1>
