--- a/work-vedio.html
+++ b/work-vedio.html
@@ -95,7 +95,7 @@
       <!-- 剪輯2 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -147,7 +147,7 @@
       <!-- 剪輯4 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -174,7 +174,7 @@
    <!--作品選項-->
     <section id="work" class="work"
     data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
       data-aos-once="false">
       <div class="work-title">
         <h1>作品集</h1>
