--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
           </div>
           <span>Mimi Jou</span>
         </a>
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="/index.html">首頁</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
-          <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
-          <li class="nav-item"><a class="nav-link" href="#work">作品集</a></li>
-        </ul>
+        <div class="nav-list-box">
+          <li class="nav-item-2"><a class="nav-link" href="/index.html">首頁</a></li>
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#about">關於我</a></li>
+            <li class="nav-item"><a class="nav-link" href="#experience">經歷</a></li>
+            <li class="nav-item"><a class="nav-link" href="#work">作品集</a></li>
+          </ul>
+        </div>
          <!--隱藏選單-->
       <button type="button" class="nav-list-btn">
         <img class="nav-list-img"src="./img/三.png" alt="btn"/>
@@ -153,6 +155,7 @@
         </div>
       </div>
     </section>
+    <div class="exp-0" id="experience"></div>
      <!-- 裝飾 -->
       <img class="dotted-line1" data-aos="fade-up" 
       data-aos-duration="2000" data-aos-delay="300" 
@@ -161,7 +164,7 @@
       data-aos-duration="2000" data-aos-delay="600" 
       data-aos-once="false" src="../img/虛線2.png"/>
      <!--經歷-->
-    <section class="experience" id="experience" data-aos="fade-up" 
+    <section class="experience"  data-aos="fade-up" 
     data-aos-duration="2000" data-aos-once="false">
        <!-- 標題 -->
       <div class="exp-title">
