--- a/work-draw.html
+++ b/work-draw.html
@@ -47,10 +47,12 @@
           </div>
           <span>Mimi Jou</span>
         </a>
-        <ul class="nav-list">
+        <div class="nav-list-box">
           <li class="nav-item"><a class="nav-link" href="/index.html">回首頁</a></li>
-          <li class="nav-item"><a class="nav-link" href="#work">其他作品</a></li>
-        </ul>
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#work">其他作品</a></li>
+          </ul>
+        </div>
          <!--隱藏選單-->
       <button type="button" class="nav-list-btn">
         <img class="nav-list-img"src="./img/三.png" alt="btn"/>
