--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           <br />用創意的思考與踏實學習的精神，努力創造清晰又有趣的設計
         </p>
         <div class="hero-btn-group">
-          <a class="hero-btn" href="#">關於我</a>
-          <a class="hero-btn" href="#">作品集</a>
+          <a class="hero-btn" href="mailto: mimijou1023@gmail.com">聯絡我</a>
+          <a class="hero-btn" href="https://mimijou.github.io/work-UI.html">UI&UX</a>
         </div>
       </div>
       <div class="hero-img" data-aos="fade-up" 
