--- a/work-UI.html
+++ b/work-UI.html
@@ -81,15 +81,16 @@
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>還在弄</h1>
+          <h1>履歷網站</h1>
           <p>
-            還在弄
-          </br>還在弄</p>
+            於Figma設計版面與內容，
+          </br>再使用 VS Code 進行編碼和製作並部署，
+            包含HTML、CSS (不含JavaScript)。</p>
           <!-- 按鈕 -->
           <a
             target="_blank"
             class="draw-btn"
-            href="#"
+            href="https://mimijou.github.io/index.html"
             >閱　覽
           </a>
         </div>
@@ -106,16 +107,16 @@
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>還在弄</h1>
+          <h1>夕日裡的王八蛋</h1>
           <p>
-            還在弄
-          </br>還在弄。
+            為朋友在西區開的日式冰店製作官網，
+        </br>依店家需求進行內容編寫整理、版面設計、網站編碼製作、部屬。
           </p>
           <!-- 按鈕 -->
           <a
             target="_blank"
             class="draw-btn"
-            href="#"
+            href="https://8ka8kakigori.netlify.app/"
             >閱　覽
           </a>
         </div>
@@ -132,7 +133,7 @@
             <img class="draw-pht2" src="../img/./紙.png" />
             <!-- 文字 -->
             <div class="draw-content">
-              <h1>還在弄</h1>
+              <h1>諾貝爾奶凍捲(redesign)</h1>
               <p>
                 還在弄
               </br>還在弄。
