新增UI作品介紹

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mimi</title>
+    <title>Mimi的個人網站</title>
+    <meta name=”description” content=”工作經歷|插畫|設計|UI&UX|剪輯”>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/hero.css" />
@@ -286,7 +287,7 @@
          <img src="../img/🦆 map.png"/><p>台中市東區</p>
        </div>
          <div class="information-item">
-         <img src="../img/🦆 mail.png"/><p>oneyeen235@gmail.com</p>
+         <img src="../img/🦆 mail.png"/><p>mimijou1023@gmail.com</p>
          </div>
        </div>
     </section>
