--- a/work-vedio.html
+++ b/work-vedio.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mimi</title>
+    <title>Mimi的個人網站-剪輯</title>
     <!-- css -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/work.css" />
