--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimi的個人網站</title>
-    <meta name=”description” content=”工作經歷|插畫|設計|UI&UX|剪輯”>
+    <meta name=”description” content=”工作簡歷|插畫|設計|UI&UX|剪輯”>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/hero.css" />
