--- a/work-UI.html
+++ b/work-UI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mimi的個人網站-UI&UX</title>
@@ -28,17 +28,21 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@700&family=Noto+Sans+TC:wght@100;800&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <!--設計-->
   <body>
     <!--導覽列-->
-     <!--手機-->
-     <ul class="nav-list-phone">
-      <li class="nav-item-phone"><a class="nav-link" href="/index.html">回首頁</a></li>
-      <li class="nav-item-phone"><a class="nav-link" href="#work">其他作品</a></li>
-     </ul>
-     <!--電腦-->
+    <!--手機-->
+    <ul class="nav-list-phone">
+      <li class="nav-item-phone">
+        <a class="nav-link" href="/index.html">回首頁</a>
+      </li>
+      <li class="nav-item-phone">
+        <a class="nav-link" href="#work">其他作品</a>
+      </li>
+    </ul>
+    <!--電腦-->
     <section class="nav-outside">
       <nav class="navbar">
         <a class="nav-logo" href="/index.html">
@@ -48,31 +52,34 @@
           <span>Mimi Jou</span>
         </a>
         <div class="nav-list-box">
-          <li class="nav-item"><a class="nav-link" href="/index.html">回首頁</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/index.html">回首頁</a>
+          </li>
           <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="#work">其他作品</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#work">其他作品</a>
+            </li>
           </ul>
         </div>
-         <!--隱藏選單-->
-      <button type="button" class="nav-list-btn">
-        <img class="nav-list-img"src="./img/三.png" alt="btn"/>
-      </button>
+        <!--隱藏選單-->
+        <button type="button" class="nav-list-btn">
+          <img class="nav-list-img" src="./img/三.png" alt="btn" />
+        </button>
       </nav>
     </section>
     <!--作品-->
     <section class="draw">
       <!-- 標題 -->
-      <div class="draw-title"
-      data-aos="fade-up" 
-      data-aos-duration="2000" 
-      >
+      <div class="draw-title" data-aos="fade-up" data-aos-duration="2000">
         <h1>UI&UX</h1>
         <img src="../img/底線.png" />
       </div>
       <!-- UI1 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      <div
+        class="draw-board"
+        data-aos="fade-up"
+        data-aos-duration="2000"
+        data-aos-delay="300"
       >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
@@ -83,23 +90,28 @@
         <div class="draw-content">
           <h1>履歷網站</h1>
           <p>
-            於Figma設計版面與內容，
-          </br>再使用 VS Code 進行編碼和製作並部署，
-            包含HTML、CSS (不含JavaScript)。</p>
+            於Figma設計版面與內容，再使用 VS Code 進行編碼和製作並部署，
+            包含HTML、CSS (不含JavaScript)。
+          </p>
           <!-- 按鈕 -->
-          <a
-            target="_blank"
-            class="draw-btn"
-            href="https://mimijou.github.io/index.html"
-            >閱　覽
-          </a>
+          <div class="draw-btn-box">
+            <a
+              target="_blank"
+              class="draw-btn-2"
+              href="https://mimijou.github.io/index.html"
+              >前　往
+            </a>
+            <a
+              target="_blank"
+              class="draw-btn"
+              href="https://western-chatter-58e.notion.site/Mimi-bf898584c7c54714a008a4a50607ae52"
+              >閱　覽
+            </a>
+          </div>
         </div>
       </div>
       <!-- UI2 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000" 
-      >
+      <div class="draw-board" data-aos="fade-up" data-aos-duration="2000">
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
@@ -109,86 +121,88 @@
         <div class="draw-content">
           <h1>夕日裡的王八蛋</h1>
           <p>
-            為朋友在西區開的日式冰店製作官網，
-        </br>依店家需求進行內容編寫整理、版面設計、網站編碼製作、部屬。
+            為朋友開的日式冰店製作官網，依店家需求進行內容規劃、版面設計，網站編碼製作後部屬。
           </p>
           <!-- 按鈕 -->
-          <a
-            target="_blank"
-            class="draw-btn"
-            href="https://8ka8kakigori.netlify.app/"
-            >閱　覽
-          </a>
+          <div class="draw-btn-box">
+            <a
+              target="_blank"
+              class="draw-btn-2"
+              href="https://8ka8kakigori.netlify.app/"
+              >前　往
+            </a>
+            <a
+              target="_blank"
+              class="draw-btn"
+              href="https://western-chatter-58e.notion.site/daab149cad234d26bd2b522ab7f87627"
+              >閱　覽
+            </a>
+          </div>
         </div>
       </div>
       <!-- UI3 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000" 
-     >
-            <!-- 裝飾 -->
-            <img class="paper-clip" src="../img/迴紋針.png" />
-            <!-- 圖片 -->
-            <img class="draw-pht1" src="../img/UI-3.png" />
-            <img class="draw-pht2" src="../img/./紙.png" />
-            <!-- 文字 -->
-            <div class="draw-content">
-              <h1>諾貝爾奶凍捲(redesign)</h1>
-              <p>
-                還在弄
-              </br>還在弄。
-              </p>
-              <!-- 按鈕 -->
-              <a
-                target="_blank"
-                class="draw-btn"
-                href="#"
-                >閱　覽
-              </a>
-            </div>
+      <div class="draw-board" data-aos="fade-up" data-aos-duration="2000">
+        <!-- 裝飾 -->
+        <img class="paper-clip" src="../img/迴紋針.png" />
+        <!-- 圖片 -->
+        <img class="draw-pht1" src="../img/UI-3.png" />
+        <img class="draw-pht2" src="../img/./紙.png" />
+        <!-- 文字 -->
+        <div class="draw-content">
+          <h1>雨田家官網 <span style="font-weight: 200">redesign</span></h1>
+          <p>還在弄還在弄還在弄還在弄還在弄還在弄還在弄</p>
+          <!-- 按鈕 -->
+          <a target="_blank" class="draw-btn" href="#">閱　覽 </a>
+        </div>
       </div>
     </section>
-           <!--作品選項-->
-    <section id="work" class="work"
-    data-aos="fade-up" 
-      data-aos-duration="2000" 
-      data-aos-once="false">
+    <!--作品選項-->
+    <section
+      id="work"
+      class="work"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      data-aos-once="false"
+    >
       <div class="work-title">
         <h1>作品集</h1>
         <img src="../img/底線.png" />
       </div>
       <div class="work-item">
         <div class="item-box">
-          <a  href="./work-draw.html" class="work-draw"></a>
+          <a href="./work-draw.html" class="work-draw"></a>
           <p>插畫</p>
         </div>
         <div class="item-box">
-          <a  href="./work-design.html" class="work-design"></a>
+          <a href="./work-design.html" class="work-design"></a>
           <p>設計</p>
         </div>
         <div class="item-box">
-          <a  href="./work-vedio.html" class="work-vedio"></a>
+          <a href="./work-vedio.html" class="work-vedio"></a>
           <p>剪輯</p>
         </div>
         <div class="item-box">
-          <a  href="./work-UI.html" class="work-UI"></a>
+          <a href="./work-UI.html" class="work-UI"></a>
           <p>UI&UX</p>
-      </div>
         </div>
-    </section> 
+      </div>
+    </section>
     <!--資訊-->
     <section class="lowest">
       <div class="information">
-         <div class="information-item">
-         <img src="../img/🦆 ig.png"/><p>ika_ink_</p>
-         </div>
-       <div class="information-item">
-         <img src="../img/🦆 map.png"/><p>台中市東區</p>
-       </div>
-         <div class="information-item">
-         <img src="../img/🦆 mail.png"/><p>oneyeen235@gmail.com</p>
-         </div>
-       </div>
+        <div class="information-item">
+          <img src="../img/🦆 ig.png" />
+          <p>ika_ink_</p>
+        </div>
+        <div class="information-item">
+          <img src="../img/🦆 map.png" />
+          <p>台中市東區</p>
+        </div>
+        <div class="information-item">
+          <img src="../img/🦆 mail.png" />
+          <p>oneyeen235@gmail.com</p>
+        </div>
+      </div>
     </section>
     <div class="overlay"></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
