--- a/work-UI.html
+++ b/work-UI.html
@@ -75,39 +75,18 @@
         <img src="../img/底線.png" />
       </div>
       <!-- UI1 -->
-      <div
-        class="draw-board"
-        data-aos="fade-up"
-        data-aos-duration="2000"
-        data-aos-delay="300"
-      >
+      <div class="draw-board" data-aos="fade-up" data-aos-duration="2000">
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
-        <img class="draw-pht1" src="../img/UI-1.png" />
+        <img class="draw-pht1" src="../img/UI-3.png" />
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>履歷網站</h1>
-          <p>
-            於Figma設計版面與內容，再使用 VS Code 進行編碼和製作並部署，
-            包含HTML、CSS (不含JavaScript)。
-          </p>
+          <h1>珍有味官網<span style="font-weight: 200"> redesign</span></h1>
+          <p>為小時候常吃的水餃食品行重新設計官網，除了優化整體視覺，也重新規劃了內容分類</p>
           <!-- 按鈕 -->
-          <div class="draw-btn-box">
-            <a
-              target="_blank"
-              class="draw-btn-2"
-              href="https://mimijou.github.io/index.html"
-              >前　往
-            </a>
-            <a
-              target="_blank"
-              class="draw-btn"
-              href="https://western-chatter-58e.notion.site/Mimi-bf898584c7c54714a008a4a50607ae52"
-              >閱　覽
-            </a>
-          </div>
+          <a target="_blank" class="draw-btn" href="https://western-chatter-58e.notion.site/redesgin-b2ffd1e0b56d4dafb30ad1e618e99990">閱　覽 </a>
         </div>
       </div>
       <!-- UI2 -->
@@ -121,7 +100,8 @@
         <div class="draw-content">
           <h1>夕日裡的王八蛋</h1>
           <p>
-            為朋友開的日式冰店製作官網，依店家需求進行內容規劃、版面設計，網站編碼製作後部屬。
+            為朋友開的日式冰店製作官網，依店家需求設計版面內容、撰寫文案，進行網頁切版並透過託管平台部署。
+          </br>使用工具Figma、VS Code(HTML、CSS)
           </p>
           <!-- 按鈕 -->
           <div class="draw-btn-box">
@@ -141,20 +121,35 @@
         </div>
       </div>
       <!-- UI3 -->
-      <div class="draw-board" data-aos="fade-up" data-aos-duration="2000">
-        <!-- 裝飾 -->
-        <img class="paper-clip" src="../img/迴紋針.png" />
-        <!-- 圖片 -->
-        <img class="draw-pht1" src="../img/UI-3.png" />
-        <img class="draw-pht2" src="../img/./紙.png" />
-        <!-- 文字 -->
-        <div class="draw-content">
-          <h1>雨田家官網 <span style="font-weight: 200">redesign</span></h1>
-          <p>還在弄還在弄還在弄還在弄還在弄還在弄還在弄</p>
-          <!-- 按鈕 -->
-          <a target="_blank" class="draw-btn" href="#">閱　覽 </a>
+      <div
+      class="draw-board"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      data-aos-delay="300"
+    >
+      <!-- 裝飾 -->
+      <img class="paper-clip" src="../img/迴紋針.png" />
+      <!-- 圖片 -->
+      <img class="draw-pht1" src="../img/UI-1.png" />
+      <img class="draw-pht2" src="../img/./紙.png" />
+      <!-- 文字 -->
+      <div class="draw-content">
+        <h1>履歷網站</h1>
+        <p>
+          設計版面與內容，進行網頁切版、撰寫文案後並透過託管平台部署。
+          使用工具Figma、VS Code(HTML、CSS)
+        </p>
+        <!-- 按鈕 -->
+        <div class="draw-btn-box">
+          <a
+            target="_blank"
+            class="draw-btn"
+            href="https://western-chatter-58e.notion.site/Mimi-bf898584c7c54714a008a4a50607ae52"
+            >閱　覽
+          </a>
         </div>
       </div>
+    </div>
     </section>
     <!--作品選項-->
     <section
