--- a/work-UI.html
+++ b/work-UI.html
@@ -84,7 +84,7 @@
         <!-- 文字 -->
         <div class="draw-content">
           <h1>珍有味官網<span style="font-weight: 200"> redesign</span></h1>
-          <p>為小時候常吃的水餃食品行重新設計官網，除了優化整體視覺，也重新規劃了內容分類</p>
+          <p>為宜蘭著名的水餃食品行『珍有味』重新設計官網，以更豐富的視覺、互動性為目標。</p>
           <!-- 按鈕 -->
           <a target="_blank" class="draw-btn" href="https://western-chatter-58e.notion.site/redesgin-b2ffd1e0b56d4dafb30ad1e618e99990">閱　覽 </a>
         </div>
