更新影音內容

--- a/work-vedio.html
+++ b/work-vedio.html
@@ -72,55 +72,30 @@
       <!-- 剪輯1 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" data-aos-delay="300" 
+      data-aos-duration="2000" 
      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
-        <img class="draw-pht1" src="../img/vedio-1.png" />
+        <img class="draw-pht1" src="../img/vedio-4.png" />
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>料理製作</h1>
+          <h1>短影音廣告</h1>
           <p>
-            紀錄友人的料理教學，負責食材準備拍攝、剪輯，
-          </br>上字配樂、製作裝飾、插圖素材等。</p>
-          <!-- 按鈕 -->
-          <a
-            target="_blank"
-            class="draw-btn"
-            href="https://www.youtube.com/watch?v=DoVjFiis7k0&t=300s"
-            >閱　覽
-          </a>
-        </div>
-      </div>
-      <!-- 剪輯2 -->
-      <div class="draw-board"
-      data-aos="fade-up" 
-      data-aos-duration="2000" 
-      >
-        <!-- 裝飾 -->
-        <img class="paper-clip" src="../img/迴紋針.png" />
-        <!-- 圖片 -->
-        <img class="draw-pht1" src="../img/vedio-2.png" />
-        <img class="draw-pht2" src="../img/./紙.png" />
-        <!-- 文字 -->
-        <div class="draw-content">
-          <h1>試吃評測</h1>
-          <p>
-            澎湖Osir & Jane頻道委託，整理已拍攝好的毛片，          
-        </br>上字幕及配樂。
+            規劃影片文字內容，製作腳本與素材，
+          </br>並依主管要求片進行取捨剪輯。
           </p>
           <!-- 按鈕 -->
           <a
             target="_blank"
             class="draw-btn"
-            href="https://www.youtube.com/watch?v=WyySDGw4GxM"
+            href="https://western-chatter-58e.notion.site/7ca92aefa24d4f1591a965733843f5c9"
             >閱　覽
           </a>
         </div>
       </div>
-      <!-- 剪輯3 -->
+      <!-- 剪輯2 --> 
       <div class="draw-board"
       data-aos="fade-up" 
       data-aos-duration="2000" data-aos-delay="300" 
@@ -146,28 +121,53 @@
           </a>
         </div>
       </div>
-      <!-- 剪輯4 -->
+      <!-- 剪輯3 -->
       <div class="draw-board"
       data-aos="fade-up" 
-      data-aos-duration="2000" 
+      data-aos-duration="2000" data-aos-delay="300" 
      >
         <!-- 裝飾 -->
         <img class="paper-clip" src="../img/迴紋針.png" />
         <!-- 圖片 -->
-        <img class="draw-pht1" src="../img/vedio-4.png" />
+        <img class="draw-pht1" src="../img/vedio-1.png" />
         <img class="draw-pht2" src="../img/./紙.png" />
         <!-- 文字 -->
         <div class="draw-content">
-          <h1>短影音廣告</h1>
+          <h1>料理製作</h1>
           <p>
-            規劃影片文字內容，製作腳本與素材，
-          </br>並依主管要求片進行取捨剪輯。
+            紀錄友人的料理教學，負責食材準備拍攝、剪輯，
+          </br>上字配樂、製作裝飾、插圖素材等。</p>
+          <!-- 按鈕 -->
+          <a
+            target="_blank"
+            class="draw-btn"
+            href="https://www.youtube.com/watch?v=DoVjFiis7k0&t=300s"
+            >閱　覽
+          </a>
+        </div>
+      </div>
+      <!-- 剪輯4 -->
+      <div class="draw-board"
+      data-aos="fade-up" 
+      data-aos-duration="2000" 
+      >
+        <!-- 裝飾 -->
+        <img class="paper-clip" src="../img/迴紋針.png" />
+        <!-- 圖片 -->
+        <img class="draw-pht1" src="../img/vedio-2.png" />
+        <img class="draw-pht2" src="../img/./紙.png" />
+        <!-- 文字 -->
+        <div class="draw-content">
+          <h1>試吃評測</h1>
+          <p>
+            澎湖Osir & Jane頻道委託，整理已拍攝好的毛片，          
+        </br>上字幕及配樂。
           </p>
           <!-- 按鈕 -->
           <a
             target="_blank"
             class="draw-btn"
-            href="https://www.youtube.com/shorts/YG50OjRt3dY"
+            href="https://www.youtube.com/watch?v=WyySDGw4GxM"
             >閱　覽
           </a>
         </div>
